<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="ro.test.walleet.ui.main.WalletController" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <ImageView
            android:id="@+id/wallet_icon_iw"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_molecular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/molecular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wallet_icon_iw" />

        <TextView
            android:id="@+id/seed_phrase_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/seed_phrase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tv"
            tools:text="Seed Phrase" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/seed_phrase_chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="8dp"
            android:background="@drawable/chip_group_shape"
            app:onAddChipsToChipGroup="@{viewModel.mnemonicPhrase}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seed_phrase_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/connect_to_web_wallet_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/scan_qr_code"
            app:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:onClickNavigate="@{@id/action_mainFragment_to_scannerFragment}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>